--- a/src/html/blocks/headerWhite.html
+++ b/src/html/blocks/headerWhite.html
@@ -1,8 +1,16 @@
 <header class="header-fixed" id="main-header">
   <div class="container">
-    <div class="main-into__header header-container">
+    <div
+      id="header-white"
+      class="main-into__header header-container header-white"
+    >
       <a href="/">
-        <img src="./img/icons/blueLogo.svg" alt="Fenix Repower" />
+        <img
+          id="default-logo"
+          src="./img/icons/whiteLogo.svg"
+          alt="Fenix Repower"
+        />
+        <img id="new-logo" src="./img/icons/blueLogo.svg" alt="Fenix Repower" />
       </a>
 
       <ul>
@@ -27,13 +35,26 @@
         </li>
       </ul>
 
-      <div class="header-btn">
+      <div class="header-btn header-btn__white">
         <a href="#!">Contact us</a>
       </div>
 
       <button id="open-menu">
         <p>Menu</p>
         <svg
+          id="default-burger"
+          width="20"
+          height="20"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M1 16v-2h18v2H1zm0-5V9h18v2H1zm0-5V4h18v2H1z"
+            fill="#224479"
+          />
+        </svg>
+        <svg
+          id="new-burger"
           width="20"
           height="20"
           viewBox="0 0 20 20"
