--- a/src/html/blocks/mobile-nav.html
+++ b/src/html/blocks/mobile-nav.html
@@ -27,7 +27,7 @@
   <div class="mobile-nav__content">
     <ul>
       <li><a href="pageServices.html"> Services </a></li>
-      <li><a href="#!">Projects</a></li>
+      <li><a href="pageProject.html">Projects</a></li>
       <li><a href="#!">Investments</a></li>
       <li><a href="pageNews.html">News</a></li>
       <li><a href="#!">Team</a></li>
